# siar_packages

./: .kdev_include_paths  LICENSE  README.md
alert_db/: CMakeLists.txt  package.xml
alert_db/src/: alert_db.hpp  alert_db_node.cpp
alert_db/srv/: GenerateAlert.srv  ServiceabilityAlert.srv
arduimu_v3/: CMakeLists.txt  LICENSE  README.md  package.xml
arduimu_v3/arduino_src/: HMC5883.h  HMC5883.ino  MPU6000.h  MPU6000.ino  README.rtf  arduimu.ino
arduimu_v3/launch/: arduimu_v3.launch
arduimu_v3/src/: arduimu_v3.hpp  imufilter.hpp  main.cpp
base_station/: CMakeLists.txt  package.xml
base_station/Perspectives/: base_station_cloud.rviz  base_station_great_screen.perspective  base_station_plugin.perspective  base_station_reconst.rviz  base_station_rqt.perspective  gas_natural.perspective  message_publisher.perspective
base_station/launch/: new_base_station.launch  new_base_station_360.launch  new_base_station_test.launch  octomap_base_station.launch  point_clouds_base.launch  start_base_station.launch  start_base_station_360.launch  start_base_station_360_sevilla.launch  start_base_station_raposa.launch  teleop_key.launch  test_base_station.launch
base_station/scripts/: launch_octomap.bash
base_station/src/: BaseStation.cpp  BaseStation.h  CameraSettings.cpp  CameraSettings.h  Comms.cpp  Comms.h  base_station.cpp  get_images_labeling.cpp  qnode.cpp  qnode.hpp  testComm.cpp
base_station/test/: alert_text.txt
base_station/ui/: about_siar_gui.ui  arcas_coordination_center.ui  my_plugin.ui  siar_gui.ui
frame_dropper/: CMakeLists.txt  README.md  package.xml
frame_dropper/launch/: frame_dropper.launch  splitter.launch
frame_dropper/src/: .kdev_include_paths  frame_dropper.cpp  image_splitter.cpp
localization_siar/functions/: CMakeLists.txt  package.xml
localization_siar/sewer_graph/: .#CMakeLists.txt.1.1.1.2  .kdev_include_paths  CMakeLists.txt  README  package.xml
pcl_processing/: CMakeLists.txt  package.xml  pcl_processing.kdev4
pcl_processing/.kdev4/: pcl_processing.kdev4
pcl_processing/launch/: bag_play_point_cloud.launch  bag_play_point_cloud_comparer.launch  bag_play_point_cloud_saver.launch  map_analysis.launch  map_analysis_bag.launch
pcl_processing/rviz/: map_analysis.rviz
pcl_processing/scripts/: correct_bag.py
pcl_processing/src/: accumulateCloud.cpp  map_analysis.cpp  point_cloud_clean_ref.cpp  point_cloud_compare (copia).cpp  point_cloud_compare.cpp  point_cloud_save_ref.cpp  point_cloud_subscriber.cpp  processPointCloud.cpp  processPointCloud.h  siar_map_analysis.cpp  siar_map_analysis.h  siar_section.cpp  siar_section.h  test_icp.cpp
rssi_get/: CMakeLists.txt  README.md  package.xml  rssi_get.kdev4
rssi_get/.kdev4/: rssi_get.kdev4
rssi_get/msg/: Nvip_status.msg
rssi_get/scripts/: get_rssi_nvip_2400.py
siar_controller/: CMakeLists.txt  package.xml
siar_controller/cfg/: SiarController.cfg  siar_controller.yaml  siar_controller_fast.yaml  siar_controller_fast_command.yaml  siar_controller_fast_more_T.yaml  siar_controller_test.yaml  velocity_set_fast_smooth  velocity_set_fast_smooth_2  velocityset  velocityset0.35  velocityset_0.5  velocityset_2  velocityset_extra  velocityset_fast
siar_controller/launch/: siar_controller.launch  siar_controller_view.rviz
siar_controller/src/: .kdev_include_paths  command_evaluator.hpp  siar_controller.hpp  siar_controller_node.cpp  siar_footprint.hpp
siar_controller/test/: map_sewer_fake.m  map_sewer_fake_2.m
siar_driver/: CMakeLists.txt  README.md  package.xml
siar_driver/cfg/: locks_mux.yaml  twist_mux.yaml
siar_driver/data/: center_x  lin_pos  width
siar_driver/launch/: bag.launch  calibrate_width.launch  comms.launch  controller.launch  electronics_transform_static.launch  frames_7_cam_new_platform.launch  frames_siar.launch  perception.launch  sensor_transform_siar_4_cam.launch  sensor_transform_siar_5_cam_double_low_test.launch  sensor_transform_siar_5_cam_may.launch  sensor_transform_siar_7_cam.launch  sensor_transform_siar_calib_2016_07.launch  sensor_transform_siar_calib_2017_02_14_4_cam.launch  siar_controller_driver.launch  start.launch  start_costmap.launch  start_guided.launch  start_guided_fast.launch  test_controller.launch  test_controller_bag.launch  test_controller_bag_costmap.launch  test_controller_costmap.launch
siar_driver/msg/: SiarArmCommand.msg  SiarBatteryMonitor.msg  SiarLightCommand.msg  SiarPowerSupply.msg  SiarStatus.msg
siar_driver/rqt/: plot_and_rviz.perspective
siar_driver/src/: .kdev_include_paths  .mbzirc_teleop_joy.cpp.swp  arm_saver.cpp  arm_tester.cpp  mbzirc_teleop_joy.cpp  siar_calibration_node.cpp  siar_node.cpp  siar_raw_motors.cpp  siar_teleop_joy.cpp  siar_teleop_joy_simulation.cpp
siar_driver/test/: base2deploy1  base2deploy12ground  base2deploy12up  base2deploy22ground  base2deploy22up  base2deploy32ground  base2deploy32up  demo_test  get_position3  home2base  pickup_rep_2  up2leftground  up2rightground
siar_packages/: CMakeLists.txt  package.xml
siar_planner/: CMakeLists.txt  package.xml
siar_planner/action/: PassFork.action
siar_planner/launch/: action_server.launch  test.launch
siar_planner/src/: siar_planner_action_server.hpp  siar_planner_node.cpp  test_planner.cpp
siar_planner/test/: problem_1.yaml  problem_2.yaml  problem_3.yaml  problem_4.yaml  problem_5.yaml  real_params.yaml  test_map_1.yaml  test_map_2.yaml  test_map_3.yaml  test_map_fork.yaml  test_params.yaml  test_params_fork.yaml  test_params_fork_2.yaml  test_params_fork_3.yaml  test_params_fork_file.yaml  test_params_fork_file_non_abbr.yaml  velocityset  velocityset_2  velocityset_3
udp_bridge/: CMakeLists.txt  README.md  package.xml
udp_bridge/cfg/: camera_info_160.yaml  camera_info_320.yaml  camera_info_640.yaml  test_translate_360.yaml  translate_360.yaml
udp_bridge/launch/: translate_joy_afterglow.launch  udp_client.launch  udp_client360.launch  udp_server.launch  web_cams.launch
udp_bridge/src/: .kdev_include_paths  cycle.hpp  joy_translator.hpp  test_joy_translator.cpp  udp_client.hpp  udp_client_node.cpp  udp_manager.hpp  (+2 more)
(+223 files in other folders)
