<?xml version="1.0"?>
<package>
  <name>siar_controller</name>
  <version>0.0.0</version>
  <description>An automatic controller for the Sewer Inspection Autonomous Robot. 
    It automatically provides the robot with a low-risk trajectory taking into account a height map computed by
    the siar_costmap package.
    </description>

  <maintainer email="daletei@upo.es">David Alejo Teissiere</maintainer>


  <license>BSD</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/siar_controller</url> -->

  <author email="noeperez@upo.es">Noe Perez Higueras</author>
  <author email="fcaballero@us.es">Fernando Caballero</author>
  <author email="daletei@upo.es">David Alejo Teissiere</author>
  <author email="lmercab@upo.es">Luis Merino</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>functions</build_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>functions</run_depend>


  <export>
  </export>
</package>