<?xml version="1.0"?>
<package>
  <name>siar_planner</name>
  <version>0.0.0</version>
  <description>This module implements some planning algorithms for navigating through the sewers of Barcelona</description>

  <maintainer email="daletei@upo.es">David Alejo Teissière</maintainer>


  <license>BSD</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/siar_planner</url> -->


  <author email="iperde@upo.es">Ignacio Perez Hurtado de Mendoza</author>
  <author email="lmercab@upo.es">Luis Merino Cabanas</author>
  <author email="fcaballero@us.es">Fernando Caballero Benitez</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>functions</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>siar_controller</build_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>functions</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>siar_controller</run_depend>


  <export>
  </export>
</package>
